--- a/project1.html
+++ b/project1.html
@@ -15,6 +15,11 @@
     <input type="file" name="" id=""> please choose the file <br> <br>
     <input type="radio" name="" id=""> Male or Female  <br> <br>
     <input type="email" name="" id=""> please enter your email <br> <br>
-  </form>
-  
+  </form> 
+
+  <h1 style="color: deepskyblue;">Hello the new day</h1>
+  <h1 style="color: rgb(235, 127, 224);">Hello the new day</h1>
+  <h1 style="color: rgb(214, 246, 89);">Hello the new day</h1>
+
+
 </html>
