--- a/project1.html
+++ b/project1.html
@@ -3,23 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello world</title>
+  <title>Document</title>
 </head>
-<body style="background-color: rgb(255, 222, 233); font-family: 'Courier New', Courier, monospace; align-items: center; justify-content: center; display: flex;">
-  <form action="" style="width: 500px; height: 400px; border: greenyellow 10px solid; text-align: center; margin-top: 20px; padding-top: 50px; border-radius: 10px;">
-    <input type="text"> please enter your name <br> <br>
-    <input type="password" name="" id=""> please enter your password <br> <br>
-    <input type="color" name="" id=""> please choose the color <br> <br>
-    <input type="checkbox" name="" id=""> please check <br> <br>
-    <input type="datetime-local" name="" id=""> please check your date <br> <br>
-    <input type="file" name="" id=""> please choose the file <br> <br>
-    <input type="radio" name="" id=""> Male or Female  <br> <br>
-    <input type="email" name="" id=""> please enter your email <br> <br>
-  </form> 
-
-  <h1 style="color: deepskyblue;">Hello the new day</h1>
-  <h1 style="color: rgb(235, 127, 224);">Hello the new day</h1>
-  <h1 style="color: rgb(214, 246, 89);">Hello the new day</h1>
-
-
+<body>
+  <div class="" style="background-color: blueviolet; width: 100px; height: 80px;">Hello</div>
+  <div class="" style="background-color: aqua; width: 100px; height: 80px;">Hello</div>
+  <div class="" style="background-color: chartreuse;">Hello</div>
+  <div class="">Hello</div>
+  <div class="">Hello</div>
+  <div class="">Hello</div>
+</body>
 </html>
