--- a/project1.html
+++ b/project1.html
@@ -8,9 +8,9 @@
 <body>
   <div class="" style="background-color: blueviolet; width: 100px; height: 80px;">Hello</div>
   <div class="" style="background-color: aqua; width: 100px; height: 80px;">Hello</div>
-  <div class="" style="background-color: chartreuse;">Hello</div>
-  <div class="">Hello</div>
-  <div class="">Hello</div>
-  <div class="">Hello</div>
+  <div class="" style="background-color: chartreuse; width: 100px; height: 80px; border:rgb(235, 168, 241) 10px solid;">Hello</div>
+  <div class="" style="background-color: cyan;">Hello</div>
+  <div class="" style="background-color: deeppink;">Hello</div>
+  <div class="" style="background-color: fuchsia;">Hello</div>
 </body>
 </html>
