--- a/project1.html
+++ b/project1.html
@@ -6,11 +6,11 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="" style="background-color: blueviolet; width: 100px; height: 80px;">Hello</div>
-  <div class="" style="background-color: aqua; width: 100px; height: 80px;">Hello</div>
-  <div class="" style="background-color: chartreuse; width: 100px; height: 80px; border:rgb(235, 168, 241) 10px solid;">Hello</div>
-  <div class="" style="background-color: cyan;">Hello</div>
-  <div class="" style="background-color: deeppink;">Hello</div>
-  <div class="" style="background-color: fuchsia;">Hello</div>
+  <div class="" style="background-color: blueviolet; width: 100px; height: 80px; border: greenyellow 10px solid; border-radius: 10px; color: aliceblue;">Hello</div> <br>
+  <div class="" style="background-color: aqua; width: 100px; height: 80px; border: blueviolet 10px solid;">Hello</div> <br>
+  <div class="" style="background-color: chartreuse; width: 100px; height: 80px; border:rgb(235, 168, 241) 10px solid;">Hello</div> <br>
+  <div class="" style="background-color: cyan; border: plum 10px solid; width: 100px; height: 80px;">Hello</div> <br>
+  <div class="" style="background-color: deeppink; width: 100px; height: 80px; border: olivedrab 10px solid; ">Hello</div> <br>
+  <div class="" style="background-color: fuchsia; width: 100px; height: 80px; border: yellow 10px solid;">Hello</div><br>
 </body>
 </html>
