--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Hello New start</title>
 </head>
 <body>
   <div class="" style="background-color: blueviolet; width: 100px; height: 80px; border: greenyellow 10px solid; border-radius: 10px; color: aliceblue;">Hello</div> <br>
